<resources>
    <string name="app_name">Vistas EV1</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="haz_olvidado_tu_contrasena">¿Haz olvidado tu contraseña?</string>
    <string name="contrasena">Contraseña</string>
    <string name="registrarse"><u>Registrarse</u></string>
    <string name="registrarse2">Registrarse</string>
    <string name="correo">Correo</string>
    <string name="ya_tienes_una_cuenta"><u>¿Ya tienes una cuenta?</u></string>
    <string name="sectores_de_estacionamientos">Sectores de Estacionamientos</string>
    <string name="sector_2_ocupado_30">Sector 2 \n Ocupado: 90% \n <u>Ver sector</u></string>
    <string name="sector_1_ocupado_70">Sector 1 \n Ocupado: 70% \n <u>Ver sector</u></string>
    <string name="home">Home</string>
    <string name="icono_de_configuracion">Icono de configuración</string>
    <string name="sector_1">Sector 1</string>
    <string name="sector_2">Sector 2</string>
    <string name="sector_3">Sector 3</string>
    <string name="sector_4">Sector 4</string>
    <string name="sector_5">Sector 5</string>
    <string name="sector_1_estacionamientos">Sector 1 / Estacionamientos</string>
    <string name="icono_de_auto">icono de auto</string>
    <string name="estacionamiento_1">Estacionamiento 1</string>
    <string name="ocupado">Ocupado</string>
    <string name="estacionamiento_2">Estacionamiento 2</string>
    <string name="libre">Libre</string>
    <string name="estacionamiento_3">Estacionamiento 3</string>
    <string name="estacionamiento_4">Estacionamiento 4</string>
    <string name="estacionamiento_5">Estacionamiento 5</string>
    <string name="estacionamiento_6">Estacionamiento 6</string>
    <string name="estacionamiento_7">Estacionamiento 7</string>
    <string name="estacionamiento_8">Estacionamiento 8</string>
    <string name="configuracion">Configuración</string>
    <string name="modo_oscuro">Modo oscuro</string>
    <string name="sector_2_estacionamientos">Sector 2 / Estacionamientos</string>
    <string name="sector_3_estacionamientos">Sector 3 / Estacionamientos</string>
    <string name="sector_4_estacionamientos">Sector 4 / Estacionamientos</string>
    <string name="sector_5_estacionamientos">Sector 5 / Estacionamientos</string>
    <string name="contacto">Contacto</string>
    <string name="idioma">Idioma</string>
    <string name="mi_cuenta">Mi cuenta</string>
    <string name="cambiar_contrase_a">Cambiar contraseña</string>
    <string name="icono_de_flecha">icono de flecha</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="nombre_del_estacionamiento">Nombre del Estacionamiento</string>
    <string name="agregar_estacionamiento">Agregar Estacionamiento</string>
    <string name="leer_estacionamientos">Leer Estacionamientos</string>
    <string name="actualizar_estacionamiento">Actualizar Estacionamiento</string>
    <string name="eliminar_estacionamiento">Eliminar Estacionamiento</string>
    <string name="resultados">Resultados</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="terminos_y_servicios">Términos y servicios</string>
    <string name="texto_terminos">1. Aceptación de términos: \n\n Al utilizar la aplicación Apparking, el usuario acepta estos Términos y Servicios. Si no está deacuerdo con estos términos, no haga ocupación de la Aplicación. \n\n 2. Descrición del servicio: \n\n La aplicación Apparking permite a los usuarios localizar los estacionamientos disponibles. \n\n 3.Registro y seguridad de la cuenta: \n\n El usuario debe proporcionar información precisa y válida al registrarse. \n El usuario es responsable de mantener la seguridad de su cuenta y debe notificar cualquier uso no autorizado.</string>
    <string name="volver_a_configuracion">Volver a configuración</string>
    <string name="titulo_terminos_y_servicios">Términos y servicios</string>
</resources>