<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".RegistroMainActivity"
    >

    <TextView
        android:id="@+id/tvTituloRegister1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrarse2"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textColor="@color/black"
        android:layout_marginTop="130dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="@font/latolight"
        />


    <LinearLayout
        android:id="@+id/linearLayoutRegister1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTituloRegister1"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/grey"
            android:hint="@string/nombre_de_usuario"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etilRegister1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/latolight"
                android:textSize="20sp"
                android:autofillHints="username"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/grey"
            android:layout_marginTop="20dp"
            android:hint="@string/correo"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etilRegister2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/latolight"
                android:textSize="20sp"
                android:autofillHints="emailAddress"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColorHint="@color/grey"
            android:hint="@string/contrasena">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etilRegister3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/latolight"
                android:textSize="20sp"
                android:autofillHints="password"
                />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutRegister2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutRegister1">

        <Button
            android:id="@+id/btnRegister1"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registrarse2"
            android:textColor="@color/white"
            android:layout_gravity="center"
            app:backgroundTint="@color/azul_cielo"
            android:fontFamily="@font/latolight"
            android:textSize="15sp"
            />


        <TextView
            android:id="@+id/tvCuentaExistente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ya_tienes_una_cuenta"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:textColor="@color/azul_cielo"
            android:fontFamily="@font/latolight"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>