<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".LoginMainActivity">

    <TextView
        android:id="@+id/tvTituloLogin1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/iniciar_sesion"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textColor="@color/black"
        android:layout_marginTop="170dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="@font/latolight"
        />


    <LinearLayout
        android:id="@+id/linearLayoutLogin1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTituloLogin1"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/ic_user"
            android:textColorHint="@color/grey"
            android:hint="@string/nombre_de_usuario">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etilLogin1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/latolight"
                android:textSize="20sp"
                android:autofillHints="username"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:endIconMode="custom"
            android:textColorHint="@color/grey"
            app:endIconDrawable="@drawable/ic_password"
            android:hint="@string/contrasena">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etilLogin2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/latolight"
                android:textSize="20sp"
                android:autofillHints="password"
                />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutLogin2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutLogin1">

        <Button
            android:id="@+id/btnLogin1"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/iniciar_sesion"
            android:textColor="@color/white"
            android:layout_gravity="center"
            app:backgroundTint="@color/azul_cielo"
            android:fontFamily="@font/latolight"
            android:textSize="15sp"
            />



        <TextView
            android:id="@+id/tvNuevaCuenta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrarse"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:textColor="@color/azul_cielo"
            android:fontFamily="@font/latolight"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>